# bqf

src/: CMakeLists.txt  bqf_cf.cpp  main.cpp
src/headers/: bqf_cf.hpp
unitary_tests/: cqf_test.cpp
